kubernetes/backend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: secureops-backend
  namespace: secureops

spec:

  selector:
    app: secureops-backend

  ports:

  - port: 5000
    targetPort: 5000

  type: NodePort
